# Sampling-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: BootstrapTest.c  KFoldCrossValidationTest.c  StratifiedKFoldCrossValidationTest.c
src/: Bootstrap.c  Bootstrap.h  CMakeLists.txt  KFoldCrossValidation.c  KFoldCrossValidation.h  StratifiedKFoldCrossValidation.c  StratifiedKFoldCrossValidation.h
