cmake_minimum_required(VERSION 3.23)
project(Sampling)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(util_c REQUIRED)

add_library(Sampling src/Bootstrap.c src/Bootstrap.h src/KFoldCrossValidation.c src/KFoldCrossValidation.h src/StratifiedKFoldCrossValidation.c src/StratifiedKFoldCrossValidation.h)
target_link_libraries(Sampling util_c::util_c)
add_executable(BootstrapTest src/Bootstrap.c src/Bootstrap.h src/KFoldCrossValidation.c src/KFoldCrossValidation.h src/StratifiedKFoldCrossValidation.c src/StratifiedKFoldCrossValidation.h Test/BootstrapTest.c)
target_link_libraries(BootstrapTest util_c::util_c)
add_executable(KFoldCrossValidationTest src/Bootstrap.c src/Bootstrap.h src/KFoldCrossValidation.c src/KFoldCrossValidation.h src/StratifiedKFoldCrossValidation.c src/StratifiedKFoldCrossValidation.h Test/KFoldCrossValidationTest.c)
target_link_libraries(KFoldCrossValidationTest util_c::util_c)
add_executable(StratifiedKFoldCrossValidationTest src/Bootstrap.c src/Bootstrap.h src/KFoldCrossValidation.c src/KFoldCrossValidation.h src/StratifiedKFoldCrossValidation.c src/StratifiedKFoldCrossValidation.h Test/StratifiedKFoldCrossValidationTest.c)
target_link_libraries(StratifiedKFoldCrossValidationTest util_c::util_c)
